2014-09-01  Miguel de Dios <miguel.dedios@artica.es>

	* pandora_console/include/functions_graph.php,
	pandora_console/operation/events/events.build_query.php,
	pandora_console/operation/events/events.php,
	pandora_console/operation/events/events_list.php: added feature to
	filter by module in events.
	
	TICKETS #385

2014-08-30  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_context_pandora_server_email.php,
	include/help/ja/help_propagate_acl.php: Added new help files.

2014-08-29  Miguel de Dios <miguel.dedios@artica.es>
	* pandora_console/images/clippy/clippy.png,
	pandora_console/images/clippy/easter_egg_00.png,
	pandora_console/images/clippy/easter_egg_01.png,
	pandora_console/images/clippy/easter_egg_02.png,
	pandora_console/images/clippy/easter_egg_03.png,
	pandora_console/images/clippy/easter_egg_04.png,
	pandora_console/images/pandorin.png,
	pandora_console/include/help/clippy/homepage.php: added the
	easter egg for clippy.

2014-08-29  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* install.php: Removed the disabled option of the "drop database
	if exists" checkbox on the step 3.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.php: Owner of a report can be delete it.
	Ticket #1199.

2014-08-27  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Fixed problem displaying empty 
	agents.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_clippy.php, include/styles/pandora.css: some
	aesthetic changes suggested by Carla.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/introjs.css, include/styles/pandora_black.css,
	include/styles/pandora.css, general/logon_ok.php,
	mobile/include/style/main.css: some aesthetic changes suggested by
	Carla.
	
	* include/help/clippy/godmode_agentes_modificar_agente.php: fixed
	the position of dialog.

2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	